WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31631
Fix the clobber list of cacheFlush for ARM and Thumb2 on Linux
https://bugs.webkit.org/show_bug.cgi?id=31631
Summary
Fix the clobber list of cacheFlush for ARM and Thumb2 on Linux
Gabor Loki
Reported
2009-11-18 11:01:51 PST
We should inform GCC that R2 register is also modified inside the inline asm.
Attachments
Fix the clobber list of cacheFlush for ARM and Thumb2 on Linux
(1.79 KB, patch)
2009-11-18 11:02 PST
,
Gabor Loki
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabor Loki
Comment 1
2009-11-18 11:02:53 PST
Created
attachment 43443
[details]
Fix the clobber list of cacheFlush for ARM and Thumb2 on Linux
Csaba Osztrogonác
Comment 2
2009-11-18 11:37:59 PST
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/jit/ExecutableAllocator.h Transmitting file data .. Committed revision 51123.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug