third_party/WebKit/JavaScriptCore/jit/ExecutableAllocator.h
@@ -204,7 +204,7 @@ public:
             "pop     {r7}\n"
             :
             : "r" (code), "r" (reinterpret_cast<char*>(code) + size)
-            : "r0", "r1");
+            : "r0", "r1", "r2");
     }
 #elif PLATFORM(SYMBIAN)
     static void cacheFlush(void* code, size_t size)
@@ -225,7 +225,7 @@ public:
             "pop     {r7}\n"
             :
             : "r" (code), "r" (reinterpret_cast<char*>(code) + size)
-            : "r0", "r1");
+            : "r0", "r1", "r2");
     }
 #else
     #error "The cacheFlush support is missing on this platform."
